WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208926
Fix two MediaStream tests
https://bugs.webkit.org/show_bug.cgi?id=208926
Summary
Fix two MediaStream tests
Eric Carlson
Reported
2020-03-11 10:19:57 PDT
Update results and mark tests as passing.
Attachments
Patch for landing.
(2.87 KB, patch)
2020-03-11 10:23 PDT
,
Eric Carlson
youennf
: review+
Details
Formatted Diff
Diff
Patch for landing.
(2.08 KB, patch)
2020-06-08 11:59 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(12.14 KB, patch)
2020-06-09 01:51 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-11 10:23:02 PDT
<
rdar://problem/60329008
>
Eric Carlson
Comment 2
2020-03-11 10:23:17 PDT
Created
attachment 393259
[details]
Patch for landing.
youenn fablet
Comment 3
2020-03-11 10:27:33 PDT
Comment on
attachment 393259
[details]
Patch for landing. View in context:
https://bugs.webkit.org/attachment.cgi?id=393259&action=review
> LayoutTests/fast/mediastream/MediaStream-video-element-expected.txt:36 > + track.label =
This is probably be fixed by
https://bugs.webkit.org/show_bug.cgi?id=208636
Eric Carlson
Comment 4
2020-06-08 11:58:20 PDT
Comment on
attachment 393259
[details]
Patch for landing. View in context:
https://bugs.webkit.org/attachment.cgi?id=393259&action=review
>> LayoutTests/fast/mediastream/MediaStream-video-element-expected.txt:36 >> + track.label = > > This is probably be fixed by
https://bugs.webkit.org/show_bug.cgi?id=208636
Indeed it is.
Eric Carlson
Comment 5
2020-06-08 11:59:01 PDT
Created
attachment 401353
[details]
Patch for landing.
youenn fablet
Comment 6
2020-06-09 01:51:12 PDT
Created
attachment 401424
[details]
Patch
EWS
Comment 7
2020-06-09 08:35:19 PDT
Committed
r262793
: <
https://trac.webkit.org/changeset/262793
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401424
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug